--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     <div class="wrap">
         <!-- header -->
         <header class="header">
-            <h1 class="m_logo">
-                <figure>
-                    <img src="./img/main/main_logo.PNG" alt="로고이미지">
-                </figure>
+            <h1 class="logo">
                 <a href="./index.html"></a>
             </h1>
             <nav class="gnb">
